// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storyshots components/auth/LostPassword default 1`] = `
<div
  class="p-fluid"
  style="height: 100%;"
>
  <form
    class="p-text-left"
  >
    <div
      class="p-field"
    >
      <label
        for="email"
      >
        E-mail
      </label>
       
      <input
        class="p-inputtext p-component"
        id="email"
        placeholder="E-mail"
        required="required"
        type="text"
      />
    </div>
     
    <!---->
     
    <div
      class="p-d-flex p-flex-column"
    >
      <button
        class="p-mb-2 p-button p-component"
        type="submit"
      >
        <span
          class="pi pi-sign-in p-button-icon p-button-icon-left"
        />
         
        <span
          class="p-button-label"
        >
          Obtenir un lien temporaire
        </span>
         
        <!---->
        <span
          class="p-ink"
        />
      </button>
    </div>
  </form>
</div>
`;

exports[`storyshots components/auth/LostPassword error 1`] = `
<div
  class="p-fluid"
  style="height: 100%;"
>
  <form
    class="p-text-left"
  >
    <div
      class="p-field"
    >
      <label
        for="email"
      >
        E-mail
      </label>
       
      <input
        class="p-inputtext p-component"
        id="email"
        placeholder="E-mail"
        required="required"
        type="text"
      />
    </div>
     
    <div
      class="p-mb-2 p-p-1 p-text-error"
    >
      <span
        class="p-text-bold"
      >
        
      </span>
      
    This is an error
  
    </div>
     
    <div
      class="p-d-flex p-flex-column"
    >
      <button
        class="p-mb-2 p-button p-component"
        type="submit"
      >
        <span
          class="pi pi-sign-in p-button-icon p-button-icon-left"
        />
         
        <span
          class="p-button-label"
        >
          Obtenir un lien temporaire
        </span>
         
        <!---->
        <span
          class="p-ink"
        />
      </button>
    </div>
  </form>
</div>
`;

exports[`storyshots components/auth/LostPassword loading 1`] = `
<div
  class="p-fluid"
  style="height: 100%;"
>
  <form
    class="p-text-left"
  >
    <div
      class="p-field"
    >
      <label
        for="email"
      >
        E-mail
      </label>
       
      <input
        class="p-inputtext p-component"
        id="email"
        placeholder="E-mail"
        required="required"
        type="text"
      />
    </div>
     
    <!---->
     
    <div
      class="p-d-flex p-flex-column"
    >
      <button
        class="p-mb-2 p-button p-component"
        disabled="disabled"
        type="submit"
      >
        <span
          class="pi pi-spin pi-spinner p-button-icon p-button-icon-left"
        />
         
        <span
          class="p-button-label"
        >
          Obtenir un lien temporaire
        </span>
         
        <!---->
        <span
          class="p-ink"
        />
      </button>
    </div>
  </form>
</div>
`;
